trying to generate changelog dynamically

--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "check-deps": "npm outdated",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
-    "cp": "npm run cp:package.json",
-    "cp:package.json": "cp package.json gh-pages/_data/",
     "decrypt:.coveralls.yml": "keybase decrypt -o .coveralls.yml .coveralls.yml.asc",
-    "gh-pages:_data": "npm run package.json",
+    "gh-pages:_data": "for x in package.json tags.json; do npm run gh-pages:_data:$x; done",
+    "gh-pages:_data:package.json": "cp package.json gh-pages/_data/",
+    "gh-pages:_data:tags.json": "wget https://api.github.com/repos/fibo/algebra/tags -O gh-pages/_data/tags.json",
     "gh-pages:push": "git subtree --prefix gh-pages push origin gh-pages",
     "gh-pages:pull": "git subtree --prefix gh-pages pull origin gh-pages",
     "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
     "istanbul": "istanbul cover _mocha",
-    "jekyll": "npm run homepage; npm run cp; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
+    "jekyll": "npm run homepage; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
     "lint": "npm run lint_src; npm run lint_test",
     "lint_src": "standard src/*.js",
     "lint_test": "cd test; standard --global describe --global it; cd -",
@@ -38,7 +38,6 @@
     "tex": "npm run tex:display; npm run tex:inline",
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
-    "package.json": "cp package.json gh-pages/_data/",
     "postversion": "git push origin v${npm_package_version}; npm publish; npm run _push",
     "test": "mocha --bail --require should --reporter min --recursive"
   },
