--- a/gh-pages/_data/package.json
+++ b/gh-pages/_data/package.json
@@ -39,7 +39,7 @@
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "postversion": "git push origin v${npm_package_version}; npm publish; npm run _push",
-    "test": "mocha --bail --require should --reporter min --recursive"
+    "test": "mocha --reporter min"
   },
   "pre-commit": [
     "lint",
@@ -64,13 +64,13 @@
     "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "coveralls": "^2.11.6",
+    "coveralls": "^2.11.9",
     "istanbul": "^0.4.1",
     "katex": "^0.5.1",
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "1.2.0",
     "pre-commit": "^1.1.2",
-    "should": "^8.0.2",
+    "should": "^8.3.0",
     "standard": "^6.0.8",
     "uglify-js": "^2.6.2"
   },
