--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "uglify-js": "^2.6.2"
   },
   "dependencies": {
+    "algebra-cyclic": "^0.1.0",
     "algebra-group": "^0.4.0",
     "cayley-dickson": "^0.3.0",
     "indices-permutations": "^0.2.0",
