--- a/_data/package.json
+++ b/_data/package.json
@@ -75,8 +75,8 @@
     "uglify-js": "^2.6.2"
   },
   "dependencies": {
+    "algebra-cyclic": "^0.1.0",
     "algebra-group": "^0.4.0",
-    "algebra-ring": "^0.4.0",
     "cayley-dickson": "^0.3.0",
     "indices-permutations": "^0.2.0",
     "inherits": "^2.0.1",
