--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "inherits": "^2.0.1",
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
+    "matrix-multiplication": "^0.1.0",
     "multidim-array-index": "^0.2.0",
     "not-defined": "^1.0.0",
     "static-props": "^0.2.0",
