--- a/_data/package.json
+++ b/_data/package.json
@@ -1,7 +1,7 @@
 {
   "name": "algebra",
   "description": "means completeness and balancing, from the Arabic word الجبر",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "engines": {
     "node": ">= 4.4.0"
   },
@@ -62,28 +62,32 @@
   ],
   "devDependencies": {
     "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
+    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "coveralls": "^2.11.9",
+    "install": "^0.6.1",
     "istanbul": "^0.4.1",
     "katex": "^0.5.1",
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "1.2.0",
+    "npm": "^3.8.6",
     "pre-commit": "^1.1.2",
     "should": "^8.3.0",
     "standard": "^6.0.8",
     "uglify-js": "^2.6.2"
   },
   "dependencies": {
-    "algebra-cyclic": "^0.1.0",
+    "algebra-cyclic": "^0.2.0",
     "cayley-dickson": "^0.3.0",
     "indices-permutations": "^0.2.0",
     "inherits": "^2.0.1",
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
+    "matrix-multiplication": "^0.4.0",
     "multidim-array-index": "^0.2.0",
     "not-defined": "^1.0.0",
-    "static-props": "^0.2.0",
+    "static-props": "^0.3.0",
     "strict-mode": "^0.5.0",
     "tensor-contraction": "^0.1.1",
     "tensor-product": "^0.2.0"
