data is enumerable

--- a/package.json
+++ b/package.json
@@ -62,13 +62,16 @@
   ],
   "devDependencies": {
     "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
+    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "coveralls": "^2.11.9",
+    "install": "^0.6.1",
     "istanbul": "^0.4.1",
     "katex": "^0.5.1",
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "1.2.0",
+    "npm": "^3.8.6",
     "pre-commit": "^1.1.2",
     "should": "^8.3.0",
     "standard": "^6.0.8",
@@ -84,7 +87,7 @@
     "matrix-multiplication": "^0.4.0",
     "multidim-array-index": "^0.2.0",
     "not-defined": "^1.0.0",
-    "static-props": "^0.2.0",
+    "static-props": "^0.3.0",
     "strict-mode": "^0.5.0",
     "tensor-contraction": "^0.1.1",
     "tensor-product": "^0.2.0"
