--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,6 @@
-{ "plugins": "transform-es2015-arrow-functions" }
+{
+  "plugins": [
+    "transform-es2015-arrow-functions",
+    "transform-es2015-destructuring"
+  ]
+}
