--- a/_data/package.json
+++ b/_data/package.json
@@ -61,8 +61,7 @@
     "math"
   ],
   "devDependencies": {
-    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
-    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "coveralls": "^2.11.9",
@@ -71,9 +70,8 @@
     "katex": "^0.5.1",
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "1.2.0",
-    "npm": "^3.8.6",
     "pre-commit": "^1.1.2",
-    "should": "^8.3.0",
+    "should": "^8.3.1",
     "standard": "^6.0.8",
     "uglify-js": "^2.6.2"
   },
@@ -85,9 +83,9 @@
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
     "matrix-multiplication": "^0.4.0",
-    "multidim-array-index": "^0.2.0",
+    "multidim-array-index": "^0.5.0",
     "not-defined": "^1.0.0",
-    "static-props": "^0.3.0",
+    "static-props": "^1.0.0",
     "strict-mode": "^0.5.0",
     "tensor-contraction": "^0.1.1",
     "tensor-product": "^0.2.0"
