fixed katex rendering

--- a/gh-pages/_config.yml
+++ b/gh-pages/_config.yml
@@ -25,6 +25,18 @@ defaults:
 
 # Custom vars
 
+katex:
+  basepath: https://cdnjs.cloudflare.com/ajax/libs/KaTeX
+  version: 0.5.1
+
+bootstrap:
+  basepath: https://maxcdn.bootstrapcdn.com/bootstrap
+  version: 3.3.6
+
+jquery:
+  basepath: https://ajax.googleapis.com/ajax/libs/jquery
+  version: 2.1.4
+
 google-analytics:
   id: UA-12635045-12
 
