--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "_build": "npm test && npm run browserify && npm run minify && npm run tex && npm run jekyll; git status",
-    "_pull": "git pull origin master && npm run gh-pages:pull",
-    "_push": "git push origin master && npm run gh-pages:push",
+    "build": "npm test && npm run browserify && npm run minify && npm run tex && npm run jekyll; git status",
     "browserify": "npm run browserify:dist; npm run browserify:test",
     "browserify:dist": "browserify -r ./index.js:${npm_package_name} -t babelify -o dist/${npm_package_name}.js",
     "browserify:test": "browserify test/*.js -t babelify -o gh-pages/test/bundle.js",
@@ -39,7 +37,11 @@
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "postversion": "git push origin v${npm_package_version}; npm publish; npm run _push",
-    "test": "mocha --reporter min"
+    "postupdate-deps": "npm test && git commit -am ':arrow_up: updated deps' || git checkout -- package.json",
+    "pull": "git pull origin master && npm run gh-pages:pull",
+    "push": "git push origin master && npm run gh-pages:push",
+    "test": "mocha --reporter min",
+    "update-deps": "npm update --save --dev"
   },
   "pre-commit": [
     "lint",
@@ -66,14 +68,13 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "coveralls": "^2.11.9",
-    "install": "^0.6.1",
     "istanbul": "^0.4.1",
-    "katex": "^0.5.1",
+    "katex": "^0.6.0",
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "1.2.0",
     "pre-commit": "^1.1.2",
-    "should": "^8.3.1",
-    "standard": "^6.0.8",
+    "should": "^9.0.0",
+    "standard": "^7.0.0",
     "uglify-js": "^2.6.2"
   },
   "dependencies": {
