--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jekyll:serve": "npm run browserify; npm run homepage; npm run cp; cd gh-pages; jekyll serve; cd ..",
     "lint": "npm run lint_src; npm run lint_test",
     "lint_src": "standard src/*.js",
-    "lint_test": "cd test; standard --global describe --global it; cd -",
+    "lint_test": "cd test; standard --env mocha; cd -",
     "minify": "cd dist; uglifyjs ${npm_package_name}.js --source-map ${npm_package_name}.map --output ${npm_package_name}.min.js --compress --mangle --preamble \"// Software: ${npm_package_name}\n// Homepage: ${npm_package_homepage}\n// License: ${npm_package_license}\"; cd -",
     "tex": "npm run tex:display; npm run tex:inline",
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
