--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "npm test && npm run browserify && npm run minify && npm run tex && npm run jekyll; git status",
+    "build": "npm test && npm run browserify && npm run minify && npm run jekyll; git status",
     "browserify": "npm run browserify:dist; npm run browserify:test",
     "browserify:dist": "browserify -r ./index.js:${npm_package_name} -o dist/${npm_package_name}.js",
     "browserify:test": "browserify test/*.js -o gh-pages/test/bundle.js",
@@ -29,9 +29,6 @@
     "lint_src": "standard src/*.js",
     "lint_test": "cd test; standard --env mocha; cd -",
     "minify": "cd dist; uglifyjs ${npm_package_name}.js --source-map ${npm_package_name}.map --output ${npm_package_name}.min.js --compress --mangle --preamble \"// Software: ${npm_package_name}\n// Homepage: ${npm_package_homepage}\n// License: ${npm_package_license}\"; cd -",
-    "tex": "npm run tex:display; npm run tex:inline",
-    "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
-    "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "postversion": "git push origin v${npm_package_version}; npm publish; npm run push",
     "postpublish": "npm run gh-pages:_data; git commit -am ':arrow_up: updated version'; npm run push",
     "postupdate-deps": "npm test && git commit -am ':arrow_up: updated deps' || git checkout -- package.json",
@@ -64,7 +61,6 @@
     "browserify": "^13.1.1",
     "coveralls": "2.x",
     "istanbul": "^0.4.1",
-    "katex": "^0.6.0",
     "mocha": "3.x",
     "mocha-lcov-reporter": "1.2.0",
     "pre-commit": "^1.1.2",
