--- a/docs/_data/package.json
+++ b/docs/_data/package.json
@@ -10,48 +10,41 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "npm test && npm run browserify && npm run minify && npm run tex && npm run jekyll; git status",
+    "build": "npm test && npm run browserify && npm run minify && npm run jekyll; git status",
     "browserify": "npm run browserify:dist; npm run browserify:test",
     "browserify:dist": "browserify -r ./index.js:${npm_package_name} -o dist/${npm_package_name}.js",
-    "browserify:test": "browserify test/*.js -o gh-pages/test/bundle.js",
-    "check-deps": "npm outdated",
+    "browserify:test": "browserify test/*.js -o docs/test/bundle.js",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
-    "gh-pages:_data": "for x in package.json tags.json; do npm run gh-pages:_data:$x; done",
-    "gh-pages:_data:package.json": "cp package.json gh-pages/_data/",
-    "gh-pages:_data:tags.json": "wget https://api.github.com/repos/fibo/${npm_package_name}/tags -O gh-pages/_data/tags.json",
-    "gh-pages:push": "git subtree --prefix gh-pages push origin gh-pages",
-    "gh-pages:pull": "git subtree --prefix gh-pages pull origin gh-pages",
-    "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
+    "docs:_data": "for x in package.json tags.json; do npm run docs:_data:$x; done",
+    "docs:_data:package.json": "cp package.json docs/_data/",
+    "docs:_data:tags.json": "wget https://api.github.com/repos/fibo/${npm_package_name}/tags -O docs/_data/tags.json",
+    "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > docs/index.md; cat README.md >> docs/index.md",
     "istanbul": "istanbul cover _mocha",
-    "jekyll": "npm run homepage; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
-    "jekyll:serve": "npm run browserify; npm run homepage; npm run cp; cd gh-pages; jekyll serve; cd ..",
+    "jekyll": "npm run homepage; npm run docs:_data; cd docs; jekyll build; cd ..",
+    "jekyll:serve": "npm run browserify; npm run homepage; npm run cp; cd docs; jekyll serve; cd ..",
     "lint": "npm run lint_src; npm run lint_test",
     "lint_src": "standard src/*.js",
-    "lint_test": "cd test; standard --global describe --global it; cd -",
+    "lint_test": "cd test; standard --env mocha; cd -",
     "minify": "cd dist; uglifyjs ${npm_package_name}.js --source-map ${npm_package_name}.map --output ${npm_package_name}.min.js --compress --mangle --preamble \"// Software: ${npm_package_name}\n// Homepage: ${npm_package_homepage}\n// License: ${npm_package_license}\"; cd -",
-    "tex": "npm run tex:display; npm run tex:inline",
-    "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
-    "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "postversion": "git push origin v${npm_package_version}; npm publish; npm run push",
-    "postpublish": "npm run gh-pages:_data; git commit -am ':arrow_up: updated version'; npm run push",
+    "postpublish": "npm run docs:_data; git commit -am ':arrow_up: updated version'; npm run push",
     "postupdate-deps": "npm test && git commit -am ':arrow_up: updated deps' || git checkout -- package.json",
-    "pull": "git pull origin master && npm run gh-pages:pull",
-    "push": "git push origin master && npm run gh-pages:push",
+    "pull": "git pull origin master && npm run docs:pull",
+    "push": "git push origin master && npm run docs:push",
     "test": "mocha",
     "update-deps": "npm update --save --dev",
     "watch": "mocha -w"
   },
   "pre-commit": [
     "lint",
-    "test",
-    "check-deps"
+    "test"
   ],
   "repository": {
     "type": "git",
     "url": "git://github.com/fibo/algebra.git"
   },
-  "changelog": "gh-pages/changelog.md",
+  "changelog": "docs/changelog.md",
   "keywords": [
     "algebra",
     "matrix",
@@ -63,28 +56,26 @@
     "math"
   ],
   "devDependencies": {
-    "browserify": "^13.1.1",
-    "coveralls": "2.x",
+    "coveralls": "^2.13.1",
     "istanbul": "^0.4.1",
-    "katex": "^0.6.0",
-    "mocha": "3.x",
-    "mocha-lcov-reporter": "1.2.0",
+    "mocha": "3.3.0",
+    "mocha-lcov-reporter": "1.3.0",
     "pre-commit": "^1.1.2",
-    "should": "^11.1.1",
-    "standard": "^8.6.0",
+    "should": "^11.2.1",
+    "standard": "^10.0.2",
     "uglify-js": "github:mishoo/UglifyJS2#harmony"
   },
   "dependencies": {
     "algebra-cyclic": "^0.2.0",
-    "cayley-dickson": "^0.4.2",
+    "cayley-dickson": "^0.5.0",
     "indices-permutations": "^0.2.0",
     "inherits": "^2.0.1",
     "laplace-determinant": "^0.1.0",
     "matrix-multiplication": "^0.5.0",
     "multidim-array-index": "^0.5.0",
     "not-defined": "^1.0.0",
-    "static-props": "1.x",
-    "strict-mode": "1.x",
+    "static-props": "^1.0.2",
+    "strict-mode": "^1.0.2",
     "tensor-contraction": "^0.1.1",
     "tensor-product": "^0.2.0"
   }
