--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "jekyll": "npm run homepage; npm run docs:_data; cd docs; jekyll build; cd ..",
     "jekyll:serve": "npm run browserify; npm run homepage; npm run cp; cd docs; jekyll serve; cd ..",
     "lint": "npm run lint_src; npm run lint_test",
-    "lint_src": "standard src/*.js",
-    "lint_test": "cd test; standard --env mocha; cd -",
+    "lint_src": "standa src/*.js",
+    "lint_test": "cd test; standa --env mocha; cd -",
     "minify": "cd dist; uglifyjs ${npm_package_name}.js --source-map ${npm_package_name}.map --output ${npm_package_name}.min.js --compress --mangle --preamble \"// Software: ${npm_package_name}\n// Homepage: ${npm_package_homepage}\n// License: ${npm_package_license}\"; cd -",
     "postversion": "git push origin v${npm_package_version}; npm publish",
     "postpublish": "npm run docs:_data; git commit -am ':arrow_up: updated version'; git push origin master",
@@ -54,14 +54,14 @@
     "math"
   ],
   "devDependencies": {
+    "browserify": "^14.1.0",
     "coveralls": "^2.13.1",
     "istanbul": "^0.4.1",
-    "mocha": "3.3.0",
+    "mocha": "3.5.0",
     "mocha-lcov-reporter": "1.3.0",
-    "browserify": "^14.1.0",
     "pre-commit": "^1.1.2",
     "should": "^11.2.1",
-    "standard": "^10.0.2",
+    "standa": "^1.0.0",
     "uglify-js": "github:mishoo/UglifyJS2#harmony"
   },
   "dependencies": {
