--- a/docs/_data/package.json
+++ b/docs/_data/package.json
@@ -55,24 +55,24 @@
   ],
   "devDependencies": {
     "browserify": "^14.1.0",
-    "coveralls": "^2.13.1",
+    "coveralls": "^3.0.0",
     "istanbul": "^0.4.1",
-    "mocha": "3.5.0",
+    "mocha": "^4.0.1",
     "mocha-lcov-reporter": "1.3.0",
     "pre-commit": "^1.1.2",
-    "should": "^11.2.1",
-    "standa": "^1.0.0",
+    "should": "^13.1.3",
+    "standa": "^1.0.2",
     "uglify-js": "github:mishoo/UglifyJS2#harmony"
   },
   "dependencies": {
-    "algebra-cyclic": "^0.2.0",
-    "cayley-dickson": "^0.5.0",
+    "algebra-cyclic": "^0.2.2",
+    "cayley-dickson": "^0.5.1",
     "indices-permutations": "^0.2.0",
     "inherits": "^2.0.1",
     "laplace-determinant": "^0.1.0",
-    "matrix-multiplication": "^0.5.0",
+    "matrix-multiplication": "^0.5.1",
     "multidim-array-index": "^0.5.0",
-    "not-defined": "^1.0.0",
+    "not-defined": "^2.0.1",
     "static-props": "^1.0.2",
     "strict-mode": "^1.0.2",
     "tensor-contraction": "^0.1.1",
