--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
   ],
   "devDependencies": {
     "browserify": "^14.1.0",
-    "coveralls": "^2.13.1",
+    "coveralls": "^3.0.0",
     "istanbul": "^0.4.1",
-    "mocha": "3.5.0",
+    "mocha": "^4.0.1",
     "mocha-lcov-reporter": "1.3.0",
     "pre-commit": "^1.1.2",
-    "should": "^11.2.1",
+    "should": "^13.1.3",
     "standa": "^1.0.2",
     "uglify-js": "github:mishoo/UglifyJS2#harmony"
   },
