--- a/package.json
+++ b/package.json
@@ -64,14 +64,12 @@
     "algebra-cyclic": "^0.2.4",
     "cayley-dickson": "^0.5.4",
     "indices-permutations": "^0.2.3",
-    "inherits": "^2.0.1",
     "laplace-determinant": "^0.2.1",
     "matrix-multiplication": "^0.5.2",
     "multidim-array-index": "^0.6.0",
     "not-defined": "^2.1.0",
     "static-props": "^1.1.2",
     "strict-mode": "^1.1.3",
-    "tensor-contraction": "^0.2.0",
-    "tensor-product": "^0.2.1"
+    "tensor-contraction": "^0.2.0"
   }
 }
