--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "npm run lint_src; npm run lint_test",
     "lint_src": "standa src/*.js",
     "lint_test": "cd test; standa --env mocha; cd -",
-    "minify": "cd dist; uglifyjs ${npm_package_name}.js --source-map --output ${npm_package_name}.min.js --compress --mangle -b beautify=false,preamble='\"// http://g14n.info/algebra\"'; cd -",
+    "minify": "cd dist; terser ${npm_package_name}.js --source-map --output ${npm_package_name}.min.js --compress --mangle -b beautify=false,preamble='\"// http://g14n.info/algebra\"'; cd -",
     "postversion": "git push origin v${npm_package_version}; npm publish",
     "postpublish": "npm run docs:_data; git commit -am ':arrow_up: updated version'; git push origin master",
     "test": "mocha"
@@ -48,15 +48,15 @@
     "math"
   ],
   "devDependencies": {
-    "browserify": "^16.1.1",
+    "browserify": "^16.5.0",
     "coveralls": "^3.0.0",
     "istanbul": "^0.4.1",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "1.3.0",
     "pre-commit": "^1.1.2",
     "should": "^13.2.3",
-    "standa": "^12.1.0",
-    "uglify-es": "^3.3.9"
+    "standa": "^14.0.0",
+    "terser": "^4.3.1"
   },
   "dependencies": {
     "algebra-cyclic": "^0.2.4",
