--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "files": ["src/index.ts"],
+  "files": ["src/index.ts", "src/examples/quick-start.ts"],
   "include": [".src/**/*.ts"]
 }
