--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     }
   },
@@ -17,6 +18,7 @@
   },
   "scripts": {
     "build": "tsc --build",
+    "check_types": "tsc --noEmit --project .",
     "prestart": "npm run build",
     "start": "serve -d ."
   },
