--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "quaternion",
     "math"
   ],
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "arithmetica": "^0.2.0"
+  }
 }
