--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "incremental": true,
     "isolatedModules": true,
     "module": "esnext",
+    "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
