--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,19 +7,10 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "target": "esnext",
-
-    // To build stripped JS, but emit declarations with JSDoc preserved:
-    // disable comments and declaration, then in package.json add script
-    //
-    //     "build": "tsc --removeComments && tsc --declaration --emitDeclarationOnly",
-    //
-    "removeComments": false,
-    "declaration": false
+    "target": "esnext"
   },
-  "exclude": ["node_modules", "**/*_test.ts"],
+  "exclude": ["node_modules"],
   "include": ["./src/**/*.ts"]
 }
